--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="{{ site.lang | default: "en-US" }}">
   <head>
+    <link rel="apple-touch-icon" sizes="180x180" href="data/favicon.ico/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="data/favicon.ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="data/favicon.ico/favicon-16x16.png">
+    <link rel="manifest" href="data/favicon.ico/site.webmanifest">
+    <link rel="mask-icon" href="data/favicon.ico/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="shortcut icon" href="data/favicon.ico/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="data/favicon.ico/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff"> 
 
     {% if site.google_analytics %}
       <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.google_analytics }}"></script>
